--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.9
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
+  qr_flutter: ^4.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
