--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   google_fonts: ^6.3.2
   image_picker: ^1.1.2
   qr_flutter: ^4.1.0
+  mobile_scanner: ^5.0.0
+  permission_handler: ^11.3.1
   intl: ^0.20.2
   path: ^1.9.1
 
