--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   permission_handler: ^11.3.1
   intl: ^0.20.2
   path: ^1.9.1
+  mapbox_maps_flutter: ^2.11.0
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
