--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path: ^1.9.1
   mapbox_maps_flutter: ^2.11.0
   geolocator: ^13.0.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
