--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   mapbox_maps_flutter: ^2.11.0
   geolocator: ^14.0.2
   cached_network_image: ^3.4.1
+  signalr_netcore: ^1.4.4
 
 dev_dependencies:
   flutter_test:
