--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   geolocator: ^14.0.2
   cached_network_image: ^3.4.1
   signalr_netcore: ^1.4.4
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
