--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cached_network_image: ^3.4.1
   signalr_netcore: ^1.4.4
   flutter_local_notifications: ^18.0.1
+  flutter_markdown: ^0.7.4
 
 dev_dependencies:
   flutter_test:
