--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: vivu_travel
-description: "A travel planning mobile app with clean architecture."
+description: "Vivu Travel - A travel planning mobile app with clean architecture."
 publish_to: "none"
 
 version: 1.0.0+1
