--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "vivu_travel" "\0"
+            VALUE "FileDescription", "Vivu Travel" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "vivu_travel" "\0"
+            VALUE "InternalName", "Vivu Travel" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "vivu_travel.exe" "\0"
-            VALUE "ProductName", "vivu_travel" "\0"
+            VALUE "ProductName", "Vivu Travel" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
